added leaflet and its geocoder to cabin details

--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+<!--    material design-->
+  <link href="https://cdn.jsdelivr.net/npm/@mdi/font@6.x/css/materialdesignicons.min.css" rel="stylesheet"/>
+
+    <!--    leaflet css-->
+  <link crossorigin="" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+        integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
+        rel="stylesheet"/>
+
+  <!-- Make sure you put this AFTER Leaflet's CSS -->
+  <script crossorigin=""
+          integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
+          src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
+
+  <!--    now add geocoder's css and js files-->
+  <link href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" rel="stylesheet"/>
+  <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
+
   <title>Cabins Inc.</title>
 </head>
 
